--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   atuin:
     image: ghcr.io/atuinsh/atuin:v18.12.0
-    command: server start
+    command: start
     restart: unless-stopped
     ports:
       - "8888:8888"
